--- a/ustawienia_window.form
+++ b/ustawienia_window.form
@@ -25,10 +25,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="62" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="wyslij_slownik_button" alignment="1" min="-2" pref="332" max="-2" attributes="0"/>
-                  <Component id="database_login_button" min="-2" pref="332" max="-2" attributes="0"/>
-                  <Component id="merge_dictionaries_button" alignment="1" min="-2" pref="332" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                  <Component id="wyslij_slownik_button" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -36,6 +34,8 @@
                       <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="mod_sciezka_button" min="-2" pref="87" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="merge_dictionaries_button" alignment="0" max="32767" attributes="0"/>
+                  <Component id="button_showdictionary" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
           </Group>
@@ -75,13 +75,13 @@
                   <Component id="podglad_button" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="mod_sciezka_button" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="database_login_button" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="wyslij_slownik_button" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="button_showdictionary" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="merge_dictionaries_button" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="26" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -146,13 +146,16 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Merge dictionaries"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="merge_dictionaries_buttonActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="database_login_button">
+    <Component class="javax.swing.JButton" name="button_showdictionary">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Login to database"/>
+        <Property name="text" type="java.lang.String" value="Show dictionary"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="database_login_buttonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_showdictionaryActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
