--- a/dictionary_window.form
+++ b/dictionary_window.form
@@ -31,6 +31,7 @@
                   <Component id="button_load" alignment="0" max="32767" attributes="0"/>
                   <Component id="button_offload" pref="361" max="32767" attributes="0"/>
                   <Component id="button_share" max="32767" attributes="0"/>
+                  <Component id="button_showdictionary" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
@@ -40,6 +41,7 @@
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
+                  <Component id="savelocal_button" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -51,7 +53,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="169" max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="98" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="button_showdictionary" min="-2" pref="65" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="button_load" min="-2" pref="48" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -64,7 +68,9 @@
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="savelocal_button" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="15" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -104,11 +110,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Load to the database"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_loadActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="button_offload">
       <Properties>
         <Property name="text" type="java.lang.String" value="Load from the database"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_offloadActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="button_share">
       <Properties>
@@ -129,6 +141,22 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="jLabel4"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="button_showdictionary">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Show dictionary"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="button_showdictionaryActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="savelocal_button">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Save local"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="savelocal_buttonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
